Composite calendar and agenda view
 - Still not quite what we want, but a close approximation to build
   on top of anyway

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,6 +4,8 @@
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
 
+    <dimen name="fragment_calendar_view_height">128dp</dimen>
     <dimen name="agenda_view_row_height">64dp</dimen>
     <dimen name="agenda_view_column_divider_height">62dp</dimen>
+
 </resources>
