Replace android-times-square with the default CalendarView
 - This also makes the date selection in the calendar widget
   "better"

--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -10,11 +10,10 @@
     tools:context="org.challenge.calendar.MainActivityFragment"
     tools:showIn="@layout/activity_main">
 
-    <com.squareup.timessquare.CalendarPickerView
+    <CalendarView
         android:id="@+id/calendar_view"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/fragment_calendar_view_height"
-        />
+        android:layout_height="@dimen/fragment_calendar_view_height"/>
 
     <TextView
         android:id="@+id/text_view_no_events"
