Add divider between Calendar and Agenda Views

--- a/app/src/main/res/layout/agenda_event.xml
+++ b/app/src/main/res/layout/agenda_event.xml
@@ -36,7 +36,7 @@
             android:textStyle="normal" />
     </RelativeLayout>
 
-    <View style="@style/Divider"
+    <View style="@style/VerticalDivider"
         android:layout_marginTop="2dp"
         android:layout_height="@dimen/agenda_view_column_divider_height"
         android:layout_marginLeft="4dp"
