--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -17,8 +17,14 @@
 
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 
-    <style name="Divider">
+    <style name="VerticalDivider">
         <item name="android:layout_width">1dp</item>
         <item name="android:background">@color/colorPrimaryDark</item>
+    </style>
+
+    <style name="HorizontalDivider">
+        <item name="android:layout_height">1dp</item>
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:background">@color/colorPrimary</item>
     </style>
 </resources>
