--- a/app/src/main/res/layout/agenda_event.xml
+++ b/app/src/main/res/layout/agenda_event.xml
@@ -8,10 +8,10 @@
     <!-- event begin and end times -->
     <RelativeLayout
         android:id="@+id/container_event_time"
-        android:layout_width="wrap_content"
+        android:layout_width="@dimen/agenda_view_event_time_cell_width"
         android:layout_height="match_parent"
         android:layout_marginLeft="24dp"
-        android:layout_marginStart="24dp"
+        android:layout_marginStart="16dp"
         android:layout_marginTop="8dp"
         android:layout_marginBottom="8dp">
 
@@ -22,6 +22,17 @@
             android:textColor="@color/primary_text_default_material_light"
             android:textSize="16sp"
             android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/text_all_day"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:gravity="center"
+            android:textColor="@color/primary_text_default_material_light"
+            android:visibility="gone"
+            android:textSize="16sp"
+            android:textStyle="normal"/>
 
         <TextView
             android:id="@+id/text_end_time"
