Use sticky-headers for agenda view list
 - Get rid of the sectioned-recyclerview

--- a/app/src/main/res/layout/agenda_header.xml
+++ b/app/src/main/res/layout/agenda_header.xml
@@ -8,6 +8,7 @@
         android:id="@+id/text_day_header"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="@color/calendar_active_month_bg"
         android:textStyle="bold"
         android:textSize="24sp"/>
 </LinearLayout>
