--- a/times-square/src/main/res/values/ids.xml
+++ b/times-square/src/main/res/values/ids.xml
@@ -1,4 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <item type="id" name="day_view_adapter_class"/>
+    <item name="day_view_adapter_class" type="id" />
 </resources>
