--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -10,7 +10,7 @@
     tools:context="org.challenge.calendar.MainActivityFragment"
     tools:showIn="@layout/activity_main">
 
-    <com.squareup.timessquare.CalendarPickerView
+    <com.squareup.timessquare.CalendarView2
         android:id="@+id/calendar_view"
         android:layout_width="match_parent"
         android:layout_height="@dimen/fragment_calendar_view_height"/>
