--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -10,6 +10,9 @@
     tools:context="org.challenge.calendar.MainActivityFragment"
     tools:showIn="@layout/activity_main">
 
+    <include layout="@layout/header"
+        android:id="@+id/calendar_header"/>
+
     <com.squareup.timessquare.CalendarView2
         android:id="@+id/calendar_view"
         android:layout_width="match_parent"
