Enhance colors, fonts - v1

--- a/times-square/src/main/res/values/styles.xml
+++ b/times-square/src/main/res/values/styles.xml
@@ -4,6 +4,7 @@
     <style name="CalendarTitle">
         <item name="android:textSize">@dimen/calendar_text_medium</item>
         <item name="android:textStyle">bold</item>
+        <item name="android:textColor">#ffffff</item>
     </style>
 
     <style name="CalendarCell">
