--- a/app/src/main/res/layout/agenda_event.xml
+++ b/app/src/main/res/layout/agenda_event.xml
@@ -1,88 +1,92 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="horizontal"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="@dimen/agenda_view_row_height"
-    android:baselineAligned="false">
-
-    <!-- event begin and end times -->
-    <RelativeLayout
-        android:id="@+id/container_event_time"
-        android:layout_width="@dimen/agenda_view_event_time_cell_width"
-        android:layout_height="match_parent"
-        android:layout_marginLeft="24dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginBottom="8dp">
+    android:layout_height="wrap_content">
 
         <TextView
             android:id="@+id/text_begin_time"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColor="@color/primary_text_default_material_light"
-            android:textSize="16sp"
+            android:textColor="@color/colorPrimaryCalendarEvent"
+            android:textSize="14sp"
+            android:gravity="start|top"
+            android:layout_marginTop="8dp"
+            android:layout_marginLeft="16dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginRight="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginBottom="4dp"
+            android:paddingRight="8dp"
+            android:paddingEnd="8dp"
+            android:paddingLeft="8dp"
+            android:paddingStart="8dp"
             android:textStyle="bold" />
 
-        <TextView
-            android:id="@+id/text_all_day"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
-            android:gravity="center"
-            android:textColor="@color/primary_text_default_material_light"
-            android:visibility="gone"
-            android:textSize="16sp"
-            android:textStyle="normal"/>
-
-        <TextView
-            android:id="@+id/text_end_time"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/text_begin_time"
-            android:layout_alignParentBottom="true"
-            android:layout_marginTop="6dp"
-            android:gravity="bottom"
-            android:textColor="@color/primary_text_disabled_material_light"
-            android:textSize="16sp"
-            android:textStyle="normal" />
-    </RelativeLayout>
-
-    <View style="@style/VerticalDivider"
-        android:layout_marginTop="2dp"
-        android:layout_height="@dimen/agenda_view_column_divider_height"
-        android:layout_marginLeft="4dp"
-        android:layout_marginStart="4dp"/>
-
-    <!-- event description -->
-    <RelativeLayout
-        android:id="@+id/container_event_description"
-        android:layout_width="0dp"
-        android:layout_height="match_parent"
-        android:layout_marginLeft="6dp"
-        android:layout_marginStart="6dp"
-        android:layout_marginTop="8dp"
-        android:layout_weight="1.0"
-        android:layout_marginBottom="8dp">
+        <View android:id="@+id/calendar_id_indicator"
+            android:layout_toRightOf="@id/text_begin_time"
+            android:layout_toEndOf="@id/text_begin_time"
+            android:layout_gravity="center_vertical"
+            android:layout_width="16dp"
+            android:layout_height="16dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginBottom="4dp"
+            android:background="@drawable/shape_calendar_id"/>
 
         <TextView
             android:id="@+id/text_event_title"
+            android:layout_toRightOf="@id/calendar_id_indicator"
+            android:layout_toEndOf="@id/calendar_id_indicator"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="20sp"
+            android:layout_marginTop="8dp"
+            android:layout_marginLeft="8dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginBottom="4dp"
+            android:paddingRight="8dp"
+            android:paddingEnd="8dp"
+            android:paddingLeft="8dp"
+            android:paddingStart="8dp"
+            android:textSize="16sp"
+            android:singleLine="true"
+            android:ellipsize="end"
             android:textStyle="normal"
-            android:textColor="@color/primary_text_default_material_light" />
+            android:textColor="@color/colorPrimaryCalendarEvent" />
+
+        <TextView
+            android:id="@+id/text_end_time"
+            android:layout_below="@id/text_begin_time"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@color/colorSecondaryCalendarEvent"
+            android:textSize="14sp"
+            android:gravity="start|top"
+            android:layout_marginLeft="16dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginBottom="2dp"
+            android:paddingRight="8dp"
+            android:paddingEnd="8dp"
+            android:paddingLeft="8dp"
+            android:paddingStart="8dp"
+            android:textStyle="normal" />
 
         <TextView
             android:id="@+id/text_event_location"
+            android:layout_toRightOf="@id/text_end_time"
+            android:layout_toEndOf="@id/text_end_time"
             android:layout_below="@id/text_event_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:layout_marginTop="4dp"
-            android:gravity="bottom"
-            android:textSize="16sp"
+            android:layout_marginLeft="32dp"
+            android:layout_marginStart="32dp"
+            android:layout_marginBottom="2dp"
+            android:paddingRight="8dp"
+            android:paddingEnd="8dp"
+            android:paddingLeft="8dp"
+            android:paddingStart="8dp"
+            android:textSize="14sp"
+            android:singleLine="true"
+            android:ellipsize="end"
             android:textStyle="normal"
-            android:textColor="@color/primary_text_disabled_material_light" />
-    </RelativeLayout>
+            android:textColor="@color/colorSecondaryCalendarEvent" />
 
-</LinearLayout>
+</RelativeLayout>
