--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
+    <color name="colorPrimary">#0073c7</color>
+    <color name="colorPrimaryDark">#0063AF</color>
     <color name="colorAccent">#FF4081</color>
+    <color name="colorPrimaryCalendarEvent">#242425</color>
+    <color name="colorSecondaryCalendarEvent">#8a8a8a</color>
+    <color name="colorAgendaSectionBackground">#e9e9e9</color>
 </resources>
