--- a/times-square/src/main/res/layout/header.xml
+++ b/times-square/src/main/res/layout/header.xml
@@ -2,7 +2,8 @@
 <com.squareup.timessquare.CalendarHeaderView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:background="#0073c7">
 
     <TextView
         android:id="@+id/month_label"
@@ -10,7 +11,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="@dimen/calendar_month_title_bottommargin"
-        android:layout_marginTop="@dimen/calendar_month_topmargin"
         android:gravity="center_horizontal" />
 
     <com.squareup.timessquare.CalendarRowView
