Add month to ActionBar

--- a/times-square/src/main/res/values/styles.xml
+++ b/times-square/src/main/res/values/styles.xml
@@ -20,6 +20,6 @@
 
     <style name="CalendarCell.CalendarDate">
         <item name="android:textSize">@dimen/calendar_text_medium</item>
-        <item name="android:textStyle">bold</item>
+        <item name="android:textStyle">normal</item>
     </style>
 </resources>
