--- a/app/src/main/res/layout/agenda_header.xml
+++ b/app/src/main/res/layout/agenda_header.xml
@@ -15,5 +15,9 @@
         android:layout_marginBottom="4dp"
         android:layout_marginLeft="4dp"
         android:layout_marginStart="4dp"
+        android:paddingLeft="4dp"
+        android:paddingStart="4dp"
+        android:paddingRight="4dp"
+        android:paddingEnd="4dp"
         android:textSize="16sp"/>
 </LinearLayout>
